# serialization-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  Serialization.sln
Serialization/: FieldData.cpp  FieldData.h  Serializable.cpp  Serializable.h  Serializable.hpp  SerializableField.cpp  Serialization.vcxproj  Serialization.vcxproj.filters  TemplateInstantiation.hpp
Serialization.xcodeproj/: project.pbxproj
Serialization.xcodeproj/xcshareddata/xcschemes/: Serialization.xcscheme
Serialization.xcworkspace/: contents.xcworkspacedata
Serialization/Source/Private/: ByteArray.cpp  FieldData.cpp  MemoryBuffer.cpp  Serializable.cpp  SerializableField.cpp
Serialization/Source/Public/: ByteArray.h  FieldData.h  MemoryBuffer.h  Serializable.h  SerializableField.h  TemplateInstantiation.hpp
SerializationTests/: SerializationTests.cpp  SerializationTests.vcxproj  SerializationTests.vcxproj.filters
SerializationTests/Implementations/: TestsImplementations.cpp  TestsImplementations.h
SerializationTests/Source/Private/: Assert.cpp  Assert.mm  ByteArrayTests.cpp  FieldDataTests.cpp  MemoryBufferTests.cpp  SerializableTests.cpp  SerializationTests.cpp  SerializationTests.mm  Test.mm  TestsImplementations.cpp
SerializationTests/Source/Public/: Assert.h  ByteArrayTests.h  FieldDataTests.h  MemoryBufferTests.h  SerializableTests.h  Test.h  TestsDeclaration.h  TestsImplementations.h  TestsMacros.h
SerializationTests/Source/Public/Assert/: Assert.windows.hpp
SerializationTests/TestFramework/: Assert.h
SerializationTests/TestFramework/Windows/: Assert.cpp
SerializationTests/TestFramework/macOS/: Assert.mm
SerializationTests/TestFrameworkProxy/: Assert.h  Assert.mm
SerializationTests/Windows/: SerializationTests.cpp
SerializationTests/macOS/: SerializationTests.mm
